--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#idea files
+*.idea
+
 # Compiled class file
 *.class
 
@@ -68,7 +71,7 @@ target_wrapper.*
 # QtCreator CMake
 CMakeLists.txt.user*
 
-# QtCreator 4.8< compilation database 
+# QtCreator 4.8< compilation database
 compile_commands.json
 
 # QtCreator local machine specific files for imported projects
